# arivu-legacy

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TROUBLESHOOTING.md  backend_test.py  docker-compose.yml  pyproject.toml
backend/: .dockerignore  .env  Dockerfile  analytics.py  content_intelligence.py  migrate_tracking_fields.py  pyproject.toml  requirements.txt  resurfacing.py  server.py  start_server.py
backend/app/: __init__.py
backend/app/cli/: __init__.py  __main__.py  client.py  config.py  formatters.py  local.py  main.py
backend/app/core/: __init__.py  config.py  database.py  dependencies.py  instance_config.py  middleware.py  security.py
backend/app/models/: __init__.py  ai_summary.py  bookmark.py  content.py  import_job.py
backend/app/routers/: __init__.py  analytics.py  auth.py  bookmarks.py  collections.py  content.py  import_export.py  knowledge_graph.py  resurfacing.py  search.py
backend/app/services/: __init__.py  ai_service.py  content_service.py  search_utils.py  (+2 more)
backend/load_tests/: README.md  locustfile.py  seed_data.py
backend/migrations/: 001_add_version_field.py  runner.py
backend/tests/: conftest.py  test_analytics.py  test_auth.py  test_auth_integration.py  test_bookmarks.py  test_cli.py  test_collections.py  test_concurrent_operations.py  test_content_service.py  test_import_export.py  test_knowledge_graph.py  test_migrations.py  test_optimistic_locking.py  test_resurfacing.py  test_search.py  test_x_integration.py
(+132 files in other folders)
